[package]
name = "codemap-diagnostic"
version = "0.1.1"
authors = ["Kevin Mehall <km@kevinmehall.net>", "The Rust Project Developers"]
license = "MIT/Apache-2.0"
repository = "https://github.com/kevinmehall/codemap-diagnostic"
documentation = "https://docs.rs/codemap-diagnostic"
description = """
Library for displaying compiler error messages, extracted from rustc.
"""
readme = "README.md"
keywords = ["compiler", "error", "warning", "format", "rustc"]
categories = ["command-line-interface"]

[features]
codemap-impl = ["codemap"]

[dependencies]
atty = "0.2.11"
termcolor = "1.0.4"
codemap = { version = "0.1.0", optional = true }

[dev-dependencies]
codemap = { version = "0.1.0" }
